Fixed search dropdown double scroll

--- a/src/components/NavBar/Search/Search.css
+++ b/src/components/NavBar/Search/Search.css
@@ -81,6 +81,7 @@
   padding: 16px, 0px, 16px, 0px;
   box-shadow: 0px 1px 4px rgba(59, 59, 59, 0.1);
   border-radius: 8px;
+  overflow-y: hidden;
 }
 
 .MuiListSubheader-root.MuiAutocomplete-groupLabel {
